fix: sidebar getting squashed

--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -1,6 +1,6 @@
 .buttonContainer
 {
-    width: 5vw;
+    width: 5rem;
     height: 100%;
     background: rgb(140, 145, 133);
     border-radius: 5px;
